NetBSD Problem Report #25202
Received: (qmail 19262 invoked by uid 605); 16 Apr 2004 16:34:18 -0000
Message-Id: <20040416163415.C585321037@smistad.uninett.no>
Date: Fri, 16 Apr 2004 18:34:15 +0200 (CEST)
From: he@netbsd.org
Sender: gnats-bugs-owner@NetBSD.org
Reply-To: he@netbsd.org
To: gnats-bugs@gnats.netbsd.org
Subject: boot failure on Challenge S system
X-Send-Pr-Version: 3.95
>Number: 25202
>Category: port-sgimips
>Synopsis: boot failure on Challenge S system
>Confidential: no
>Severity: serious
>Priority: medium
>Responsible: port-sgimips-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Fri Apr 16 16:35:00 +0000 2004
>Closed-Date: Tue Sep 05 00:13:20 +0000 2006
>Last-Modified: Sat Sep 16 15:35:00 +0000 2006
>Originator: Havard Eidnes
>Release: NetBSD 2.0C
>Organization:
>Environment:
System: NetBSD 2.0C (INSTALL32_IP2x) #21: Wed Apr 14 02:06:01 CEST 2004 he@stegg.urc.uninett.no:/usr/users/he/src/sys/arch/sgimips/compile/obj.sgimips/INSTALL32_IP2x
Architecture: sgimips
Machine: mips
>Description:
An attempt at booting an install kernel on a Challenge S
system fails in that it wedges at this point in the boot
process:
6186528+0+351564 entry: 0x88069000
[ Kernel symbol table missing! ]
Copyright (c) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004
The NetBSD Foundation, Inc. All rights reserved.
Copyright (c) 1982, 1986, 1989, 1991, 1993
The Regents of the University of California. All rights reserved.
NetBSD 2.0C (INSTALL32_IP2x) #21: Wed Apr 14 02:06:01 CEST 2004
he@stegg.urc.uninett.no:/usr/users/he/src/sys/arch/sgimips/compile/obj.sgimips/INSTALL32_IP2x
total memory = 256 MB
(768 KB reserved for ARCS)
avail memory = 242 MB
mainbus0 (root): SGI-IP22 [SGI, 690972fa], 1 processor
cpu0 at mainbus0: MIPS R4400 CPU (0x460) Rev. 6.0 with MIPS R4010 FPC Rev. 0.0
cpu0: 16KB/16B direct-mapped L1 Instruction cache, 48 TLB entries
cpu0: 16KB/16B direct-mapped write-back L1 Data cache
cpu0: 1024KB/128B direct-mapped write-back L2 Unified cache
ioc0 at mainbus0 addr 0x1fbd9800: rev 0, machine Indy (Guiness), board rev 0
int0 at mainbus0 addr 0x1fbd9880: bus 100MHz, CPU 200MHz
imc0 at mainbus0 addr 0x1fa00000: revision 3
gio0 at imc0
unknown GIO card (product 0x38 revision 0x00) at gio0 slot 0 addr 0x1f400000 not configured
Synchronous ISDN (product 0x04 revision 0x00) at gio0 slot 2 addr 0x1f000000 not configured
hpc0 at gio0 addr 0x1fb80000: SGI HPC3
zsc0 at hpc0 offset 0x59830
zstty0 at zsc0 channel 1 (console i/o)
zstty1 at zsc0 channel 0
pckbc0 at hpc0 offset 0x59840
sq0 at hpc0 offset 0x54000: SGI Seeq 80c03
sq0: Ethernet address 08:00:69:09:72:fa
wdsc0 at hpc0 offset 0x44000: WD33C93B SCSI, rev=0, target 0
scsibus0 at wdsc0: 8 targets, 8 luns per target
dsclock0 at hpc0 offset 0x60000
haltwo0 at hpc0 offset 0x58000
Something or other has apparently decided that this machine
has audio hardware, but that hardware is missing on Challenge
S systems according to the owner's manual.
I am currently regenerating kernels without haltwo0 configured
to see if that makes the system boot further.
>How-To-Repeat:
Try to boot a Challenge S system with a non-customized IP2x
kernel; watch it wedge as shown above.
>Fix:
Don't know -- need to have some way to detect the presence or
absence of the audio hardware before trying to fiddle with it?
>Release-Note:
>Audit-Trail:
From: Rafal Boni <rafal@pobox.com>
To: gnats-bugs@netbsd.org
Cc:
Subject: Re: port-sgimips/25202
Date: Mon, 26 Apr 2004 10:24:38 -0400
I attempted to reproduce this on my Challenge S over the weekend with the
latest releng build off the 2.0 branch and wasn't able to make it happen.
Note that I didn't boot the INSTALL kernel, but the plain GENERIC kernel.
I'll try the INSTALL kernel if I get a chance tonight just to make sure
it's not somehow related to a difference between one and the other.
FWIW, the kernel output from my Challenge S is below; the only difference
I see is that I've got a mezzanine SCSI/ether board in mine (which seems
to show up differently than other random GIO cards; I think this is by
"SGI design", but I can't recall), whereas Havard's seemed to have some
other card in slot 0, as shown by this message:
unknown GIO card (product 0x38 revision 0x00) at gio0 slot 0 addr 0x1f400000 not configured
--rafal
NetBSD 2.0_BETA (GENERIC32_IP2x) #0: Sat Apr 24 05:55:57 UTC 2004
autobuild@tgm.netbsd.org:/autobuild/netbsd-2-0/sgimips/OBJ/autobuild/net
bsd-2-0/src/sys/arch/sgimips/compile/GENERIC32_IP2x
total memory = 128 MB
(768 KB reserved for ARCS)
avail memory = 120 MB
mainbus0 (root): SGI-IP22 [SGI, 6909792d], 1 processor
cpu0 at mainbus0: MIPS R4400 CPU (0x460) Rev. 6.0 with MIPS R4010 FPC Rev. 0.0
cpu0: 16KB/16B direct-mapped L1 Instruction cache, 48 TLB entries
cpu0: 16KB/16B direct-mapped write-back L1 Data cache
cpu0: 1024KB/128B direct-mapped write-back L2 Unified cache
ioc0 at mainbus0 addr 0x1fbd9800: rev 0, machine Indy (Guiness), board rev 0
int0 at mainbus0 addr 0x1fbd9880: bus 100MHz, CPU 200MHz
imc0 at mainbus0 addr 0x1fa00000: revision 3
gio0 at imc0
Synchronous ISDN (product 0x04 revision 0x00) at gio0 slot 2 addr 0x1f000000 not configured
hpc0 at gio0 addr 0x1fb80000: SGI HPC3
zsc0 at hpc0 offset 0x59830
zstty0 at zsc0 channel 1 (console i/o)
zstty1 at zsc0 channel 0
pckbc0 at hpc0 offset 0x59840
sq0 at hpc0 offset 0x54000: SGI Seeq 80c03
sq0: Ethernet address 08:00:69:09:79:2d
wdsc0 at hpc0 offset 0x44000: WD33C93B SCSI, rev=0, target 0
scsibus0 at wdsc0: 8 targets, 8 luns per target
dsclock0 at hpc0 offset 0x60000
haltwo0 at hpc0 offset 0x58000: Audio hardware not present (revision ffffffff)
hpc1 at gio0 addr 0x1fb00000: SGI HPC3
zsc at hpc1 offset 0x59830 not configured
pckbc at hpc1 offset 0x59840 not configured
sq at hpc1 offset 0x54000 not configured
wdsc at hpc1 offset 0x44000 not configured
dsclock at hpc1 offset 0x60000 not configured
haltwo at hpc1 offset 0x58000 not configured
biomask 07 netmask 07 ttymask 0f clockmask bf
scsibus0: waiting 2 seconds for devices to settle...
sd0 at scsibus0 target 1 lun 0: <SEAGATE, ST32430N, 0510> disk fixed
sd0: drive offline
sd0: sync (200.00ns offset 12), 8-bit (5.000MB/s) transfers, tagged queueing
sd1 at scsibus0 target 2 lun 0: <SGI, SEAGATE ST31230N, 0272> disk fixed
sd1: drive offline
sd1: sync (200.00ns offset 12), 8-bit (5.000MB/s) transfers, tagged queueing
boot device: sd0
root on sd0a dumps on sd0b
root file system type: ffs
----
Rafal Boni rafal@pobox.com
We are all worms. But I do believe I am a glowworm. -- Winston Churchill
From: Rafal Boni <rafal@pobox.com>
To: gnats-bugs@netbsd.org
Cc: sekiya@netbsd.org, pooka@netbsd.org
Subject: Re: port-sgimips/25202
Date: Mon, 26 Apr 2004 10:34:57 -0400
Oops, I guess I didn't notice that Havard was talking about HEAD vs. the
2.0 branch; I wonder if this is related to the IP12 support, which was
brought into the HEAD but IIRC not into 2.0.
I'll try to check this on HEAD as well... In any case, it doesn't seem
to be a 2.0 issue, which makes me happy :-)
--rafal
----
Rafal Boni rafal@pobox.com
We are all worms. But I do believe I am a glowworm. -- Winston Churchill
From: Steve Rumble <rumble@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc:
Subject: PR/25202 CVS commit: src/sys/arch/sgimips
Date: Mon, 4 Sep 2006 22:06:06 +0000 (UTC)
Module Name: src
Committed By: rumble
Date: Mon Sep 4 22:06:06 UTC 2006
Modified Files:
src/sys/arch/sgimips/conf: GENERIC32_IP2x
src/sys/arch/sgimips/hpc: haltwo.c
Log Message:
Check the haltwo hardware present bit in the match function, rather than
in the attach function after we've thwacked several registers and
potentially wedged the machine. This fixes booting on Challenge S systems
and addresses PR 25202.
Consequently, re-enable haltwo in the default kernel configuration.
Many thanks to George Harvey for testing and feedback.
To generate a diff of this commit:
cvs rdiff -r1.57 -r1.58 src/sys/arch/sgimips/conf/GENERIC32_IP2x
cvs rdiff -r1.9 -r1.10 src/sys/arch/sgimips/hpc/haltwo.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: "Stephen M. Rumble" <stephen.rumble@utoronto.ca>
To: gnats-bugs@netbsd.org
Cc:
Subject: Re: port-sgimips/25202
Date: Mon, 4 Sep 2006 19:55:43 -0400
As of revision 1.10 of hpc/haltwo.c this PR appears to be resolved.
The problem was that the machine would wedge after this line in haltwo_attach:
haltwo_write_indirect(sc, HAL2_IREG_RELAY_C, HAL2_RELAY_C_STATE, 0);
The revision (which contains a hardware present bit) was not being checked until
after this access. I've moved the check (protected by a badaddr call) to the
haltwo_match routine.
George Harvey confirms success on his troublesome Challenge S and my Indy
appears not to have regressed due to the change.
Steve
State-Changed-From-To: open->closed
State-Changed-By: rumble@netbsd.org
State-Changed-When: Tue, 05 Sep 2006 00:13:20 +0000
State-Changed-Why:
Revision 1.10 of sgimips/hpc/haltwo.c contains a fix.
From: Jeff Rizzo <riz@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc:
Subject: PR/25202 CVS commit: [netbsd-4] src/sys/arch/sgimips
Date: Fri, 8 Sep 2006 03:05:32 +0000 (UTC)
Module Name: src
Committed By: riz
Date: Fri Sep 8 03:05:32 UTC 2006
Modified Files:
src/sys/arch/sgimips/conf [netbsd-4]: GENERIC32_IP2x
src/sys/arch/sgimips/hpc [netbsd-4]: haltwo.c
Log Message:
Pull up following revision(s) (requested by rumble in ticket #120):
sys/arch/sgimips/conf/GENERIC32_IP2x: revision 1.58 via patch
sys/arch/sgimips/hpc/haltwo.c: revision 1.10
Check the haltwo hardware present bit in the match function, rather than
in the attach function after we've thwacked several registers and
potentially wedged the machine. This fixes booting on Challenge S systems
and addresses PR 25202.
Consequently, re-enable haltwo in the default kernel configuration.
Many thanks to George Harvey for testing and feedback.
To generate a diff of this commit:
cvs rdiff -r1.52.2.1 -r1.52.2.2 src/sys/arch/sgimips/conf/GENERIC32_IP2x
cvs rdiff -r1.9 -r1.9.18.1 src/sys/arch/sgimips/hpc/haltwo.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: Geert Hendrickx <ghen@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc:
Subject: PR/25202 CVS commit: [netbsd-3] src/sys/arch/sgimips/hpc
Date: Sat, 16 Sep 2006 17:01:05 +0000 (UTC)
Module Name: src
Committed By: ghen
Date: Sat Sep 16 17:01:05 UTC 2006
Modified Files:
src/sys/arch/sgimips/hpc [netbsd-3]: haltwo.c
Log Message:
Pull up following revision(s) (requested by rumble in ticket #1497):
sys/arch/sgimips/hpc/haltwo.c: revision 1.10
Check the haltwo hardware present bit in the match function, rather than
in the attach function after we've thwacked several registers and
potentially wedged the machine. This fixes booting on Challenge S systems
and addresses PR 25202.
Many thanks to George Harvey for testing and feedback.
To generate a diff of this commit:
cvs rdiff -r1.8 -r1.8.2.1 src/sys/arch/sgimips/hpc/haltwo.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.