Check the haltwo hardware present bit in the match function, rather than in the attach function after we've thwacked several registers and potentially wedged the machine. This fixes booting on Challenge S systems and addresses PR 25202.

Consequently, re-enable haltwo in the default kernel configuration.

Many thanks to George Harvey for testing and feedback.